millora aparença de la informació de la sèrie

--- a/web/general.html
+++ b/web/general.html
@@ -57,29 +57,50 @@
             <section id="section2">
                 <h2>Informació sobre la producció</h2>
                 <h3>Directors</h3>
-                <ul>
-                    <li>Álex Pina (Creador de la sèrie)</li>
-                    <li>Sonia Martínez</li>
-                    <li>Jesús Colmenar</li>
-                </ul>
+                <div>
+                    <div class="directors">
+                        <img class="imatgeDirector" src="../img/directors/alexpina.jpg">
+                        <p class="textDirector">Álex Pina</p>
+                    </div>
+                    <div class="directors">
+                        <img class="imatgeDirector" src="../img/directors/soniamartinez.jpeg">
+                        <p class="textDirector">Sonia Martínez</p>
+                    </div>
+                    <div class="directors">
+                        <img class="imatgeDirector" src="../img/directors/jesuscolmenar.jpg">
+                        <p class="textDirector">Jesús Colmenar</p>
+                    </div>
+                </div>
             </section>
 
             <!-- INFORMACIÓ PRODUCTORES -->
             <section id="section3">
                 <h3>Productores</h3>
-                <ul>
-                    <li>Vancouver Media</li>
-                    <li>Atresmedia</li>
-                </ul>
+                <div>
+                    <div class="productores">
+                        <img class="imgProductores" src="../img/vancouvermedia.png" alt="logo Antena 3">
+                        <p>Vancouver Media</p>
+                    </div>
+                    <div class="productores">
+                        <img class="imgProductores" src="../img/atresmedia.png" alt="logo Netflix">
+                        <p>Atresmedia</p>
+                    </div>
+                </div>
             </section>
 
             <!-- INFORMACIÓ DISTRIBUIDORES -->
             <section id="section4">
                 <h3>Distribuidores</h3>
-                <ul>
-                    <li>Antena 3 (T1 - T2)</li>
-                    <li>Netflix (T3 - T5)</li>
-                </ul>
+                <div>
+                    <div class="distribuidores">
+                        <img class="imgDistribuidores" src="../img/antena3.png" alt="logo Antena 3">
+                        <p>Antena 3 (T1 - T2)</p>
+                    </div>
+                    <div class="distribuidores">
+                        <img class="imgDistribuidores" src="../img/netflix.png" alt="logo Netflix">
+                        <p>Netflix (T3 - T5)</p>
+                    </div>
+                </div>
             </section>
 
             <!-- ACTORS / ACTRIUS -->
