millora aparença trames sèrie

--- a/web/general.html
+++ b/web/general.html
@@ -181,22 +181,28 @@
             <!-- TRAMES DE LES TEMPORADES -->
             <section id="section6">
                 <h2>Trames</h2>
-                <h3>Part 1 i 2</h3>
-                <p>
-                    La banda es prepara per al major atracament de la història, amb l'objectiu de robar 2400 milions d'euros
-                    de la 'Fábrica Nacional de Moneda i Timbre', amb El Profesor al capdavant. El seu pla és el de quedar-se
-                    dins de la fàbrica imprimint diners durant 11 dies i amb 67 ostatges, mentre la policia busca
-                    d'aturar-los
-                    de totes les maneres possibles.
-                </p>
-                <h3>Part 3, 4 i 5</h3>
-                <p>
-                    El nou objectiu de la banda és el 'Banco de España', objectiu que tenien pensat El Profesor i Berlín, el
-                    seu germà, des de fa molt temps. El que volen fer els atracadors és fondre tot l'or de les reserves del
-                    banc per a fer més fàcil el seu transport, tot i que les coses no paren de complicar-se des del moment
-                    en
-                    que entren dins el banc.
-                </p>
+                <div>
+                    <div class="trama">
+                        <h3 class="titolTrama">Part 1 i 2</h3>
+                        <p class="textTrama">
+                            La banda es prepara per al major atracament de la història, amb l'objectiu de robar 2400 milions d'euros
+                            de la 'Fábrica Nacional de Moneda i Timbre', amb El Profesor al capdavant. El seu pla és el de quedar-se
+                            dins de la fàbrica imprimint diners durant 11 dies i amb 67 ostatges, mentre la policia busca
+                            d'aturar-los
+                            de totes les maneres possibles.
+                        </p>
+                    </div>
+                    <div class="trama">
+                        <h3 class="titolTrama">Part 3, 4 i 5</h3>
+                        <p class="textTrama">
+                            El nou objectiu de la banda és el 'Banco de España', objectiu que tenien pensat El Profesor i Berlín, el
+                            seu germà, des de fa molt temps. El que volen fer els atracadors és fondre tot l'or de les reserves del
+                            banc per a fer més fàcil el seu transport, tot i que les coses no paren de complicar-se des del moment
+                            en
+                            que entren dins el banc.
+                        </p>
+                    </div>
+                </div>
             </section>
 
             <!-- TEMES PRINCIPALS DE LA SÈRIE -->
