--- a/index.html
+++ b/index.html
@@ -75,18 +75,16 @@
 
             <div class="socialMedia">
                 <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png"
-                        alt="logoInstagram">
-                    <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+                    <img class="socialIcon" src="./img/logoinstagram.png" alt="logoInstagram">
+                    <a class="socialText" href="https://www.instagram.com/lacasadepapel/" target="_blank">Instagram</a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png"
-                        alt="logoTwitter">
-                    <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                    <img class="socialIcon" src="./img/logotwitter.png" alt="logoTwitter">
+                    <a class="socialText" href="https://twitter.com/lacasadepapel" target="_blank">Twitter</a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
-                    <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                    <img class="socialIcon" src="./img/logofacebook.png" alt="logoFacebook">
+                    <a class="socialText" href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">Facebook</a>
                 </div>
             </div>
         </footer>
