--- a/web/general.html
+++ b/web/general.html
@@ -186,9 +186,8 @@
                         <h3 class="titolTrama">Part 1 i 2</h3>
                         <p class="textTrama">
                             La banda es prepara per al major atracament de la història, amb l'objectiu de robar 2400 milions d'euros
-                            de la 'Fábrica Nacional de Moneda i Timbre', amb El Profesor al capdavant. El seu pla és el de quedar-se
-                            dins de la fàbrica imprimint diners durant 11 dies i amb 67 ostatges, mentre la policia busca
-                            d'aturar-los
+                            de la 'Fábrica Nacional de Moneda y Timbre', amb El Profesor al capdavant. El seu pla és el de quedar-se
+                            dins de la fàbrica imprimint diners durant 11 dies i amb 67 ostatges, mentre la policia busca d'aturar-los
                             de totes les maneres possibles.
                         </p>
                     </div>
@@ -198,8 +197,7 @@
                             El nou objectiu de la banda és el 'Banco de España', objectiu que tenien pensat El Profesor i Berlín, el
                             seu germà, des de fa molt temps. El que volen fer els atracadors és fondre tot l'or de les reserves del
                             banc per a fer més fàcil el seu transport, tot i que les coses no paren de complicar-se des del moment
-                            en
-                            que entren dins el banc.
+                            en que entren dins el banc.
                         </p>
                     </div>
                 </div>
@@ -223,18 +221,16 @@
 
             <div class="socialMedia">
                 <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png"
-                        alt="logoInstagram">
-                    <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+                    <img class="socialIcon" src="../img/logoinstagram.png" alt="logoInstagram">
+                    <a class="socialText" href="https://www.instagram.com/lacasadepapel/" target="_blank">Instagram</a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png"
-                        alt="logoTwitter">
-                    <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                    <img class="socialIcon" src="../img/logotwitter.png" alt="logoTwitter">
+                    <a class="socialText" href="https://twitter.com/lacasadepapel" target="_blank">Twitter</a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
-                    <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                    <img class="socialIcon" src="../img/logofacebook.png" alt="logoFacebook">
+                    <a class="socialText" href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">Facebook</a>
                 </div>
             </div>
         </footer>
