--- a/index.html
+++ b/index.html
@@ -75,16 +75,19 @@
 
             <div class="socialMedia">
                 <div class="social">
-                    <img class="socialIcon" src="./img/logoinstagram.png" alt="logoInstagram">
-                    <a class="socialText" href="https://www.instagram.com/lacasadepapel/" target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/lacasadepapel/" target="_blank">
+                        <img class="socialIcon" src="../img/logoinstagram.png" alt="logoInstagram">
+                    </a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="./img/logotwitter.png" alt="logoTwitter">
-                    <a class="socialText" href="https://twitter.com/lacasadepapel" target="_blank">Twitter</a>
+                    <a href="https://twitter.com/lacasadepapel" target="_blank">
+                        <img class="socialIcon" src="../img/logotwitter.png" alt="logoTwitter">
+                    </a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="./img/logofacebook.png" alt="logoFacebook">
-                    <a class="socialText" href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">Facebook</a>
+                    <a href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">
+                        <img class="socialIcon" src="../img/logofacebook.png" alt="logoFacebook">
+                    </a>
                 </div>
             </div>
         </footer>
