--- a/web/fotos.html
+++ b/web/fotos.html
@@ -54,22 +54,25 @@
             </div>
         </main>
         <!--COPYRIGHT + XARXES SOCIALS-->
-        <footer>
+       <footer>
             <p class="textFooter">© Drets reservats, 2022</p>
             <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
 
             <div class="socialMedia">
                 <div class="social">
-                    <img class="socialIcon" src="../img/logoinstagram.png" alt="logoInstagram">
-                    <a class="socialText" href="https://www.instagram.com/lacasadepapel/" target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/lacasadepapel/" target="_blank">
+                        <img class="socialIcon" src="../img/logoinstagram.png" alt="logoInstagram">
+                    </a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="../img/logotwitter.png" alt="logoTwitter">
-                    <a class="socialText" href="https://twitter.com/lacasadepapel" target="_blank">Twitter</a>
+                    <a href="https://twitter.com/lacasadepapel" target="_blank">
+                        <img class="socialIcon" src="../img/logotwitter.png" alt="logoTwitter">
+                    </a>
                 </div>
                 <div class="social">
-                    <img class="socialIcon" src="../img/logofacebook.png" alt="logoFacebook">
-                    <a class="socialText" href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">Facebook</a>
+                    <a href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">
+                        <img class="socialIcon" src="../img/logofacebook.png" alt="logoFacebook">
+                    </a>
                 </div>
             </div>
         </footer>
