canvis en el footer

--- a/web/agenda.html
+++ b/web/agenda.html
@@ -136,10 +136,10 @@
         </main>
         <!--COPYRIGHT + XARXES SOCIALS-->
         <footer>
-            <p class="textFooter">© Drets reservats, 2022</p>
-            <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
+            <p>© Drets reservats, 2022</p>
+            <p>Segueix la sèrie a les xarxes socials!</p=>
 
-            <div class="socialMedia">
+            <div>
                 <div class="social">
                     <a href="https://www.instagram.com/lacasadepapel/" target="_blank">
                         <img class="socialIcon" src="../img/logoinstagram.png" alt="logoInstagram">
