--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
             <div>
                 <div class="social">
                     <a href="https://www.instagram.com/lacasadepapel/" target="_blank">
-                        <img class="socialIcon" src="../img/logoinstagram.png" alt="logoInstagram">
+                        <img class="socialIcon" src="./img/logoinstagram.png" alt="logoInstagram">
                     </a>
                 </div>
                 <div class="social">
                     <a href="https://twitter.com/lacasadepapel" target="_blank">
-                        <img class="socialIcon" src="../img/logotwitter.png" alt="logoTwitter">
+                        <img class="socialIcon" src="./img/logotwitter.png" alt="logoTwitter">
                     </a>
                 </div>
                 <div class="social">
                     <a href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">
-                        <img class="socialIcon" src="../img/logofacebook.png" alt="logoFacebook">
+                        <img class="socialIcon" src="./img/logofacebook.png" alt="logoFacebook">
                     </a>
                 </div>
             </div>
