correcció petits errors

--- a/web/fotos.html
+++ b/web/fotos.html
@@ -55,16 +55,16 @@
             </div>
             -->
             <div class="slide">
-                <input type="radio" id="i1" name="images" checked />
-                <input type="radio" id="i2" name="images" />
-                <input type="radio" id="i3" name="images" />
-                <input type="radio" id="i4" name="images" />
-                <input type="radio" id="i5" name="images" />	
-                <input type="radio" id="i6" name="images" />
-                <input type="radio" id="i7" name="images" />
-                <input type="radio" id="i8" name="images" />
-                <input type="radio" id="i9" name="images" />	
-                <input type="radio" id="i10" name="images" />
+                <input type="radio" id="i1" name="images" checked>
+                <input type="radio" id="i2" name="images">
+                <input type="radio" id="i3" name="images">
+                <input type="radio" id="i4" name="images">
+                <input type="radio" id="i5" name="images">	
+                <input type="radio" id="i6" name="images">
+                <input type="radio" id="i7" name="images">
+                <input type="radio" id="i8" name="images">
+                <input type="radio" id="i9" name="images">	
+                <input type="radio" id="i10" name="images">
                 
                 <div class="slide_img" id="one">			
                     <img src="../img/im1.jpg"  alt="Atracadors deixant les armes al terra">
@@ -122,7 +122,7 @@
         <!--COPYRIGHT + XARXES SOCIALS-->
         <footer>
             <p>© Drets reservats, 2022</p>
-            <p>Segueix la sèrie a les xarxes socials!</p=>
+            <p>Segueix la sèrie a les xarxes socials!</p>
 
             <div>
                 <div class="social">
