--- a/web/general.html
+++ b/web/general.html
@@ -59,15 +59,15 @@
                 <h3>Directors</h3>
                 <div>
                     <div class="directors">
-                        <img class="imatgeDirector" src="../img/directors/alexpina.jpg">
+                        <img class="imatgeDirector" src="../img/directors/alexpina.jpg" alt="Álex Pina">
                         <p class="textDirector">Álex Pina</p>
                     </div>
                     <div class="directors">
-                        <img class="imatgeDirector" src="../img/directors/soniamartinez.jpeg">
+                        <img class="imatgeDirector" src="../img/directors/soniamartinez.jpeg" alt="Sonia Martínez">
                         <p class="textDirector">Sonia Martínez</p>
                     </div>
                     <div class="directors">
-                        <img class="imatgeDirector" src="../img/directors/jesuscolmenar.jpg">
+                        <img class="imatgeDirector" src="../img/directors/jesuscolmenar.jpg" alt="Jesús Colmenar">
                         <p class="textDirector">Jesús Colmenar</p>
                     </div>
                 </div>
@@ -78,11 +78,11 @@
                 <h3>Productores</h3>
                 <div>
                     <div class="productores">
-                        <img class="imgProductores" src="../img/vancouvermedia.png" alt="logo Antena 3">
+                        <img class="imgProductores" src="../img/vancouvermedia.png" alt="Logo Vancouver Media">
                         <p>Vancouver Media</p>
                     </div>
                     <div class="productores">
-                        <img class="imgProductores" src="../img/atresmedia.png" alt="logo Netflix">
+                        <img class="imgProductores" src="../img/atresmedia.png" alt="Logo Atresmedia">
                         <p>Atresmedia</p>
                     </div>
                 </div>
@@ -93,11 +93,11 @@
                 <h3>Distribuidores</h3>
                 <div>
                     <div class="distribuidores">
-                        <img class="imgDistribuidores" src="../img/antena3.png" alt="logo Antena 3">
+                        <img class="imgDistribuidores" src="../img/antena3.png" alt="Logo Antena 3">
                         <p>Antena 3 (T1 - T2)</p>
                     </div>
                     <div class="distribuidores">
-                        <img class="imgDistribuidores" src="../img/netflix.png" alt="logo Netflix">
+                        <img class="imgDistribuidores" src="../img/netflix.png" alt="Logo Netflix">
                         <p>Netflix (T3 - T5)</p>
                     </div>
                 </div>
@@ -108,71 +108,71 @@
                 <h2>Actors i actrius</h2>
                 <div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/tokio.jpeg">
+                        <img class="imatgeActor" src="../img/actors/tokio.jpeg" alt="Tokio">
                         <p class="textActor">Úrsula Corberó - Tokio</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/raquelmurillo.jpg">
+                        <img class="imatgeActor" src="../img/actors/raquelmurillo.jpg" alt="Raquel Murillo">
                         <p class="textActor">Itziar Atuño - Raquel Murillo</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/profesor.jpg">
+                        <img class="imatgeActor" src="../img/actors/profesor.jpg" alt="El Profesor">
                         <p class="textActor">Álvaro Morte - El Profesor</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/moscu.jpg">
+                        <img class="imatgeActor" src="../img/actors/moscu.jpg" alt="Moscú">
                         <p class="textActor">Paco Tous - Moscú</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/berlin.jpg">
+                        <img class="imatgeActor" src="../img/actors/berlin.jpg" alt="Berlín">
                         <p class="textActor">Pedro Alonso - Berlín</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/nairobi.jpg">
+                        <img class="imatgeActor" src="../img/actors/nairobi.jpg" alt="Nairobi">
                         <p class="textActor">Alba Flores - Nairobi</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/rio.jpg">
+                        <img class="imatgeActor" src="../img/actors/rio.jpg" alt="Río">
                         <p class="textActor">Miguel Herrán - Río</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/denver.jpg">
+                        <img class="imatgeActor" src="../img/actors/denver.jpg" alt="Denver">
                         <p class="textActor">Jaime Lorente - Denver</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/monica.jpg">
+                        <img class="imatgeActor" src="../img/actors/monica.jpg" alt="Mónica Gaztanbide">
                         <p class="textActor">Esther Acebo - Mónica Gaztanbide</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/arturo.webp">
+                        <img class="imatgeActor" src="../img/actors/arturo.webp" alt="Arturo">
                         <p class="textActor">Enrique Arce - Arturo</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/alison.webp">
+                        <img class="imatgeActor" src="../img/actors/alison.webp" alt="Alison Parker">
                         <p class="textActor">María Pedraza - Alison Parker</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/helsinki.webp">
+                        <img class="imatgeActor" src="../img/actors/helsinki.webp" alt="Helsinki">
                         <p class="textActor">Darko Perić - Helsinki</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/palermo.jpg">
+                        <img class="imatgeActor" src="../img/actors/palermo.jpg" alt="Palermo">
                         <p class="textActor">Rodrigo de la Serna - Palermo</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/alicia.jpg">
+                        <img class="imatgeActor" src="../img/actors/alicia.jpg" alt="Alicia Sierra">
                         <p class="textActor">Najwa Nimri - Alicia Sierra</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/marsella.webp">
+                        <img class="imatgeActor" src="../img/actors/marsella.webp" alt="Marsella">
                         <p class="textActor">Luka Peroš - Marsella</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/manila.jpg">
+                        <img class="imatgeActor" src="../img/actors/manila.jpg" alt="Manila">
                         <p class="textActor">Belén Cuesta - Manila</p>
                     </div>
                     <div class="actors">
-                        <img class="imatgeActor" src="../img/actors/tamayo.webp">
+                        <img class="imatgeActor" src="../img/actors/tamayo.webp" alt="Coronel Tamayo">
                         <p class="textActor">Fernando Cayo - Coronel Tamayo</p>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
         <!--COPYRIGHT + XARXES SOCIALS-->
         <footer>
             <p>© Drets reservats, 2022</p>
-            <p>Segueix la sèrie a les xarxes socials!</p=>
+            <p>Segueix la sèrie a les xarxes socials!</p>
 
             <div>
                 <div class="social">
