--- a/web/videos.html
+++ b/web/videos.html
@@ -132,7 +132,7 @@
         <!--COPYRIGHT + XARXES SOCIALS-->
         <footer>
             <p>© Drets reservats, 2022</p>
-            <p>Segueix la sèrie a les xarxes socials!</p=>
+            <p>Segueix la sèrie a les xarxes socials!</p>
 
             <div>
                 <div class="social">
