--- a/web/fotos.html
+++ b/web/fotos.html
@@ -12,7 +12,7 @@
     <body>
         <!--IMATGE LOGO CLUB DE FANS-->
         <header>
-            <img class="logoCF" src="../img/logo.png" alt="Logo Club de Fans de La Casa de Papel">
+            <img class="logoCF" src="../img/logo.png" width="100" height="100" alt="Logo Club de Fans de La Casa de Papel">
             <!--MENÚ NAVEGACIÓ-->
             <nav>
                 <ul class="menuNav">
@@ -113,17 +113,17 @@
             <div>
                 <div class="social">
                     <a href="https://www.instagram.com/lacasadepapel/" target="_blank">
-                        <img class="socialIcon" src="../img/logoinstagram.png" alt="logoInstagram">
+                        <img class="socialIcon" src="../img/logoinstagram.png" width="10" height="10" alt="logoInstagram">
                     </a>
                 </div>
                 <div class="social">
                     <a href="https://twitter.com/lacasadepapel" target="_blank">
-                        <img class="socialIcon" src="../img/logotwitter.png" alt="logoTwitter">
+                        <img class="socialIcon" src="../img/logotwitter.png" width="10" height="10" alt="logoTwitter">
                     </a>
                 </div>
                 <div class="social">
                     <a href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">
-                        <img class="socialIcon" src="../img/logofacebook.png" alt="logoFacebook">
+                        <img class="socialIcon" src="../img/logofacebook.png" width="10" height="10" alt="logoFacebook">
                     </a>
                 </div>
             </div>
