--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>La Casa de Papel Club de Fans</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Nico Guerin">
-        <meta name="description" content="Club de fans de La Casa de Papel. Si t'interessa
-            la sèrie, aquí pots trobar tota la informació!.">
+        <meta name="description" content="Club de fans de La Casa de Papel. Si t'interessa la sèrie, aquí pots trobar tota la informació!.">
         <meta name="keywords" content="La Casa de Papel Club de Fans">
         <link rel="stylesheet" href="./css/common.css">
         <link rel="stylesheet" href="./css/index.css">
